# chrono

./: CHANGELOG.md  CMakePresets.json
cmake/: ChronoConfig.cmake.in
contrib/: .gitlab-ci.yml
contrib/build-scripts/macos/: buildVSG.sh
contrib/docker/: release.dockerfile
contrib/docker/snippets/: chrono.dockerfile
contrib/packaging-python/conda/: bld.bat  build.sh  buildMacOS.sh  meta.yaml
data/precice/test/: participant_1.yaml  participant_2.yaml
src/: CMakeLists.txt
src/chrono/: CMakeLists.txt
src/chrono/assets/: ChVisualModel.cpp  ChVisualModel.h  ChVisualShape.h  ChVisualShapeFEA.cpp  ChVisualShapeFEA.h  ChVisualSystem.cpp  ChVisualSystem.h
src/chrono/collision/: ChCollisionModel.cpp  ChCollisionModel.h  ChCollisionShape.cpp  ChCollisionShape.h
src/chrono/core/: ChChrono.h  ChClassFactory.h
src/chrono/fea/: ChBeamSection.h  ChBeamSectionEuler.h  ChBeamSectionShape.cpp  ChBeamSectionShape.h  ChBuilderVolume.h  ChContactSurface.h  ChContactSurfaceMesh.cpp  ChContactSurfaceMesh.h  ChDomain.h  ChDomainDeformation.h  ChDomainThermal.h  ChDomainThermoDeformation.h  ChDrawer.h  ChElementBase.h  ChElementBeam.h  ChElementBeamEuler.cpp  ChElementBeamEuler.h  ChElementGeneric.cpp  ChElementGeneric.h  ChElementShellBST.cpp  ChElementShellBST.h  ChField.h  ChFieldData.h  ChFieldElement.cpp  ChFieldElementHexahedron8.cpp  ChFieldElementHexahedron8.h  ChFieldElementTetrahedron4.h  ChLinkBeamIGAFrame.cpp  ChLinkNodeFace.cpp  ChLoadContactSurfaceMesh.h  ChMaterial3DHyperelastic.h  ChMaterial3DStressOgden.h  ChMaterialShellKirchhoff.cpp  ChMaterialShellKirchhoff.h  ChMesh.cpp  ChMesh.h  ChMeshSurface.cpp  ChMeshSurface.h  ChNodeFEAxyz.h  ChNodeFEAxyzDD.cpp  (+3 more)
src/chrono/geometry/: ChGeometry.cpp  ChGeometry.h  ChTriangle.cpp  ChTriangle.h  ChTriangleMesh.h  ChTriangleMeshConnected.cpp  ChTriangleMeshConnected.h
src/chrono/input_output/: ChUtilsYAML.cpp  ChUtilsYAML.h
src/chrono/multicore_math/: matrix.cpp  matrix.h
src/chrono/physics/: ChAssembly.cpp  ChAssembly.h  ChBody.cpp  ChBody.h  ChBodyEasy.cpp  ChContactMaterial.h  ChConveyor.cpp  ChConveyor.h  ChExternalDynamicsDAE.cpp  ChExternalDynamicsDAE.h  ChExternalDynamicsODE.cpp  ChExternalDynamicsODE.h  ChLinkMotorLinearDriveline.cpp  ChLinkMotorLinearDriveline.h  ChLinkMotorLinearSpeed.cpp  ChLinkMotorLinearSpeed.h  ChLinkMotorRotationDriveline.cpp  ChLinkMotorRotationDriveline.h  ChLinkMotorRotationSpeed.cpp  ChLinkMotorRotationSpeed.h  ChLinkTSDA.cpp  ChLinkTSDA.h  ChLoad.h  ChLoadContainer.cpp  ChLoadContainer.h  ChObject.cpp  ChObject.h  ChParticleCloud.cpp  ChParticleCloud.h  ChPhysicsItem.cpp  ChPhysicsItem.h  ChShaft.cpp  ChShaft.h  ChShaftsMotorSpeed.cpp  ChShaftsMotorSpeed.h  ChSystem.cpp  ChSystem.h
src/chrono/serialization/: ChArchive.h  ChArchiveBinary.cpp
src/chrono/soa/: ChSoaAssembly.cpp  ChSoaAssembly.h  ChSoaMobilizedBody.cpp  ChSoaMobilizedBody.h  ChSoaMobilizedBodyT.h  ChSoaRevoluteBody.cpp  ChSoaRevoluteBody.h
src/chrono/solver/: ChVariablesBodyOwnMass.h  ChVariablesBodySharedMass.h  ChVariablesGeneric.h  ChVariablesGenericDiagonalMass.h  ChVariablesNode.h
src/chrono/timestepper/: ChIntegrable.h  ChStaticAnalysis.cpp  ChTimestepper.cpp  ChTimestepperExplicit.cpp  ChTimestepperExplicit.h  ChTimestepperImplicit.cpp
src/chrono_cascade/: ChCascadeIrrMeshTools.cpp  ChCascadeIrrMeshTools.h
src/chrono_fsi/sph/: CMakeLists.txt
src/chrono_irrlicht/: ChIrrGUI.cpp  ChIrrNodeShape.cpp  ChIrrTools.cpp  ChIrrTools.h  ChVisualSystemIrrlicht.cpp  ChVisualSystemIrrlicht.h
src/chrono_modal/: ChModalAssembly.cpp  ChModalAssembly.h
src/chrono_multidomain/: CMakeLists.txt  ChSolverBBmultidomain.cpp  ChSolverPSORmultidomain.cpp  ChSystemDescriptorMultidomain.cpp
src/chrono_parsers/: CMakeLists.txt
src/chrono_parsers/yaml/: ChParserFsiYAML.cpp  ChParserMbsYAML.cpp  ChParserSphYAML.cpp  ChParserTdpfYAML.cpp  ChParserVehicleYAML.cpp  ChParserYAML.cpp  ChParserYAML.h
src/chrono_postprocess/: ChBlender.cpp  ChBlender.h
src/chrono_precice/: CMakeLists.txt  ChApiPrecice.h  ChPreciceAdapter.cpp  ChPreciceAdapter.h  ChPreciceAdapterMbs.cpp  ChPreciceAdapterMbs.h
src/chrono_sensor/: CMakeLists.txt
src/chrono_vehicle/: CMakeLists.txt  ChChassis.cpp  ChChassis.h  ChSubsysDefs.h  ChVehicle.h
src/chrono_vehicle/chassis/: ChRigidChassis.cpp  ChRigidChassis.h
src/chrono_vehicle/terrain/: RigidTerrain.cpp
src/chrono_vehicle/visualization/: ChScmVisualizationVSG.cpp
src/chrono_vsg/: CMakeLists.txt  ChVisualSystemVSG.cpp  ChVisualSystemVSG.h
src/chrono_vsg/impl/: BaseGuiComponents.cpp
src/chrono_vsg/utils/: ChShaderUtilsVSG.cpp  ChShaderUtilsVSG.h  ChShapeBuilderVSG.cpp  ChShapeBuilderVSG.h
src/demos/: CMakeLists.txt
src/demos/core/: demo_CH_archive.cpp
src/demos/fea/: demo_FEA_multiphysics.cpp  demo_FEA_multiphysics_custom.cpp  demo_FEA_shellsBST.cpp
src/demos/irrlicht/: demo_IRR_assets.cpp
src/demos/mbs/: demo_MBS_object_drop.cpp
src/demos/multidomain/: CMakeLists.txt  demo_MDOM_MPI_explicit.cpp  demo_MDOM_MPI_fea.cpp  demo_MDOM_MPI_grid.cpp  demo_MDOM_OMP_fea.cpp
src/demos/postprocess/: demo_POST_timestepping.cpp
(+40 files in other folders)
